# Dotta_system

./: CMakeLists.txt  Dotta UML.txt  RAM_HW_functions.cpp  RAM_HW_header.h  RAM_courses_function.cpp  RAM_courses_header.h  README.md  UI_UX_function.cpp  UI_UX_header.h  command_and_check_function.cpp  command_and_check_header.h  dotta_identified_classes.h  main.cpp  main_menu_and_belonging_functions.cpp  main_menu_and_belonging_header.h  online_user_variable_header.h  online_user_variable_source.cpp  people.txt  remember_note_code.cpp  universal_header.h
